@@ -1,8 +1,9 @@
 debian/tmp/usr/bin/xxd                           usr/bin/
 debian/helpztags                                 usr/bin/
-debian/vim.desktop                               usr/share/applications/
 debian/runtime/vimrc                             etc/vim/
 debian/runtime/debian.vim                        usr/share/vim/@VIMCUR@/
+debian/tmp/usr/share/applications/vim.desktop    usr/share/applications
+debian/tmp/usr/share/icons/
 debian/tmp/usr/share/man/man1/xxd.1              usr/share/man/man1/
 debian/tmp/usr/share/man/man1/vimdiff.1          usr/share/man/man1/
 debian/tmp/usr/share/man/man1/vim.1              usr/share/man/man1/
