@@ -1,4 +1,4 @@
 debian/tmp/usr/bin/gvimtutor				usr/bin/
-debian/gvim.desktop					usr/share/applications/
 debian/runtime/gvimrc					etc/vim/
+debian/tmp/usr/share/applications/gvim.desktop		usr/share/applications/
 debian/tmp/usr/share/man/man1/evim.1			usr/share/man/man1/
